# cs470-golf

./: 470_bb8.launch  470_sphero.launch  README.md  RRT.py  sphero_swarm_line_gui.py
bb8_bringup/: CMakeLists.txt
bb8_bringup/launch/param/: bt_addr.yaml
bb8_driver/: CMakeLists.txt  package.xml  setup.py
bb8_driver/scripts/: test_bb8_driver.py
bb8_node/: CMakeLists.txt
bb8_node/nodes/: bb8.py
devel/: .catkin  .rosinstall  setup.sh
devel/include/apriltags_intrude_detector/: apriltags_info.h  apriltags_infoRequest.h  apriltags_infoResponse.h  apriltags_intrude.h  apriltags_intrudeRequest.h
devel/include/bb8_node/: ReconfigConfig.h
devel/include/multi_apriltags_tracker/: april_tag_pos.h
devel/include/sphero_node/: SpheroCollision.h
devel/include/sphero_swarm_node/: SpheroBackLed.h  SpheroColor.h  SpheroDisableStabilization.h  SpheroHeading.h  SpheroInfo.h  SpheroInfoRequest.h  SpheroInfoResponse.h
devel/lib/apriltags_intrude_detector/: apriltags_intrude_detector  intrude_client
devel/lib/colorblob_tracker/: color_blob_tracker
devel/lib/multi_apriltags_tracker/: multi_april_tags_tracker
devel/lib/pkgconfig/: apriltags_intrude_detector.pc  bb8_bringup.pc  bb8_driver.pc  bb8_node.pc  colorblob_tracker.pc  multi_apriltags_tracker.pc  sphero_bringup.pc  sphero_dashboard.pc  sphero_description.pc  sphero_driver.pc  sphero_node.pc  sphero_swarm_bringup.pc  sphero_swarm_dashboard.pc  sphero_swarm_line_demo.pc  sphero_swarm_node.pc  sphero_swarm_teleop.pc  sphero_teleop.pc
devel/share/apriltags_intrude_detector/cmake/: apriltags_intrude_detector-msg-extras.cmake  apriltags_intrude_detector-msg-paths.cmake  apriltags_intrude_detectorConfig.cmake
devel/share/bb8_bringup/cmake/: bb8_bringupConfig.cmake
devel/share/bb8_driver/cmake/: bb8_driverConfig.cmake
devel/share/bb8_node/cmake/: bb8_node-msg-paths.cmake  bb8_nodeConfig.cmake
devel/share/colorblob_tracker/cmake/: colorblob_trackerConfig.cmake
devel/share/multi_apriltags_tracker/cmake/: multi_apriltags_tracker-msg-extras.cmake  multi_apriltags_tracker-msg-paths.cmake  multi_apriltags_trackerConfig.cmake
devel/share/sphero_bringup/cmake/: sphero_bringupConfig.cmake
devel/share/sphero_dashboard/cmake/: sphero_dashboardConfig.cmake
devel/share/sphero_description/cmake/: sphero_descriptionConfig.cmake
devel/share/sphero_driver/cmake/: sphero_driverConfig.cmake
devel/share/sphero_node/cmake/: sphero_node-msg-paths.cmake  sphero_nodeConfig.cmake
devel/share/sphero_swarm_bringup/cmake/: sphero_swarm_bringupConfig.cmake
devel/share/sphero_swarm_dashboard/cmake/: sphero_swarm_dashboardConfig.cmake
devel/share/sphero_swarm_line_demo/cmake/: sphero_swarm_line_demoConfig.cmake
devel/share/sphero_swarm_node/cmake/: sphero_swarm_node-msg-extras.cmake  (+2 more)
install/include/apriltags_intrude_detector/: apriltags_intrudeResponse.h
install/include/bb8_node/: SpheroCollision.h
install/include/sphero_swarm_node/: SpheroAngularVelocity.h  SpheroImu.h  SpheroOdometry.h  SpheroSwarmCollision.h  SpheroTurn.h  SpheroTwist.h
install/lib/multi_apriltags_tracker/: multi_april_tags_tracker
install/lib/pkgconfig/: apriltags_intrude_detector.pc  bb8_bringup.pc  multi_apriltags_tracker.pc  sphero_dashboard.pc  sphero_description.pc  sphero_swarm_bringup.pc  sphero_swarm_dashboard.pc  sphero_swarm_line_demo.pc  sphero_swarm_teleop.pc
install/lib/sphero_swarm_dashboard/: sphero_swarm_dashboard.py
install/lib/sphero_swarm_node/: sphero_swarm_manager.py
install/lib/sphero_swarm_teleop/: sphero_swarm_teleop_gui.py
install/lib/sphero_teleop/: sphero_teleop_key.py
install/share/multi_apriltags_tracker/: package.xml
install/share/sphero_swarm_bringup/: package.xml
install/share/sphero_swarm_bringup/cmake/: sphero_swarm_bringupConfig.cmake
install/share/sphero_swarm_bringup/launch/param/: swarm.yaml  swarm.yaml~
install/share/sphero_swarm_dashboard/: package.xml
install/share/sphero_swarm_line_demo/: package.xml
install/share/sphero_swarm_node/: package.xml
install/share/sphero_teleop/: package.xml
sphero_bringup/launch/: sphero_bt_addr.launch
sphero_bringup/launch/param/: bt_addr.yaml
sphero_dashboard/: CMakeLists.txt
sphero_dashboard/launch/: sphero_dashboard.launch
sphero_dashboard/src/: sphero_dashboard.py
sphero_driver/: CMakeLists.txt
sphero_driver/scripts/: sphero_swarm_manager.py  test_four_sphero_driver.py  test_sphero_driver.py  test_two_sphero_driver.py
sphero_node/nodes/: sphero.py
sphero_swarm_bringup/: CMakeLists.txt
sphero_swarm_bringup/launch/: sphero_swarm.launch
sphero_swarm_dashboard/: CMakeLists.txt
sphero_swarm_dashboard/launch/: sphero_swarm_dashboard.launch
sphero_swarm_node/: CMakeLists.txt
sphero_swarm_node/msg/: SpheroAngularVelocity.msg  SpheroDisableStabilization.msg  SpheroHeading.msg  SpheroImu.msg  SpheroSwarmCollision.msg  SpheroTurn.msg  SpheroTwist.msg
sphero_swarm_node/src/: sphero_swarm.py
sphero_swarm_teleop/: CMakeLists.txt  package.xml
sphero_swarm_teleop/launch/: keyboard_teleop.launch
sphero_swarm_teleop/src/: sphero_swarm_random_move.py
sphero_teleop/: CMakeLists.txt
sphero_teleop/launch/: keyboard_teleop.launch
(+109 files in other folders)
