<package>
  <name>bb8_driver</name>
  <version>0.1.0</version>
  <description>
    bb8_driver provides a python based driver for interfacing with the BB8 over bluetooth.
  </description>
  <author>Melonee Wise</author>
  <maintainer email="melonee@meloneewise.com">Melonee Wise</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/sphero_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>bluepy</buildtool_depend>

  <!-- TODO: add proper system depends (python, bluetooth, etc) -->
  <run_depend>bluepy</run_depend>

</package>

