<package>
  <name>sphero_swarm_dashboard</name>
  <version>0.0.5</version>
  <description>
    sphero_swarm_dashboard provides a GUI for displaying Sphero information.
  </description>
  <author>Daqing Yi</author>
  <maintainer email="daqing.yi@byu.edu">Daqing Yi</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/sphero_swarm_dashboard</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
